[gd_scene load_steps=30 format=3 uid="uid://ca2bfq1gm3nxc"]

[ext_resource type="Texture2D" uid="uid://bmn5jb1xcp8lb" path="res://assets/game/characters/rogues.png" id="1_3g6yi"]
[ext_resource type="Script" uid="uid://c5gmfinumygu4" path="res://scripts/game/components/core/hurtbox_component.gd" id="2_mveou"]
[ext_resource type="Script" uid="uid://b6ojek6ypaial" path="res://scripts/game/state_machine/node_state_machine.gd" id="3_q7sc0"]
[ext_resource type="Script" uid="uid://cqq8dehx4mn2a" path="res://scenes/characters/enemy/skeleton_soldier/idle_state.gd" id="4_xfi85"]
[ext_resource type="Script" uid="uid://y1xtoh3og51s" path="res://scenes/characters/enemy/skeleton_soldier/hurt_state.gd" id="5_yh76k"]
[ext_resource type="Script" uid="uid://bqgniqxnc4snp" path="res://scenes/characters/enemy/skeleton_soldier/chase_state.gd" id="6_e6f12"]
[ext_resource type="Script" uid="uid://csnsynjeksolq" path="res://scenes/characters/enemy/skeleton_soldier/flee_state.gd" id="7_ygbvs"]
[ext_resource type="Script" uid="uid://cu8mashyovlri" path="res://scenes/characters/enemy/skeleton_soldier/death_state.gd" id="8_e8tjr"]
[ext_resource type="Script" uid="uid://blt8qxujohwor" path="res://scripts/game/components/enemy/enemy_sense_component.gd" id="9_ss0ny"]
[ext_resource type="Script" uid="uid://dphatmavxn3u8" path="res://scripts/game/components/enemy/pathfinding_component.gd" id="10_8rgxc"]
[ext_resource type="Script" uid="uid://c7bsngihe1vew" path="res://scripts/game/components/core/movement_component.gd" id="11_gl741"]
[ext_resource type="Script" uid="uid://ch8r0xsbtuj63" path="res://scripts/game/components/core/health_component.gd" id="12_wqvmn"]
[ext_resource type="Script" uid="uid://850sk6q2ppie" path="res://scripts/game/components/animation/wobble_animation_component.gd" id="13_msr0g"]
[ext_resource type="Script" uid="uid://bstid0r2r8cgw" path="res://scripts/game/components/animation/death_animation_component.gd" id="14_sh4l0"]
[ext_resource type="Script" uid="uid://echlin1jyex0" path="res://scripts/game/components/animation/hurt_stagger_animation_component.gd" id="15_xwu44"]
[ext_resource type="Script" uid="uid://bcayodtipc5tk" path="res://scripts/game/components/enemy/separation_component.gd" id="16_11rik"]
[ext_resource type="Script" uid="uid://ddick5omjoqrp" path="res://scripts/game/components/animation/fade_animation_component.gd" id="17_77hyl"]
[ext_resource type="Script" uid="uid://b35kv6kb2iivw" path="res://scripts/game/components/ui/damage_number_component.gd" id="18_p1g1x"]
[ext_resource type="PackedScene" uid="uid://cn74jcjtvrdmu" path="res://scenes/objects/coin.tscn" id="20_hepg3"]
[ext_resource type="Script" uid="uid://5xngd2y3x7h" path="res://scripts/game/components/enemy/enemy_damage_component.gd" id="21_hl47r"]
[ext_resource type="Script" uid="uid://duisvww7b2r3b" path="res://scripts/game/components/ui/text_bubble_component.gd" id="22_y4y2w"]
[ext_resource type="Resource" path="res://resources/dialogue/skeleton_spawn_dialogue.tres" id="23_5cvg5"]
[ext_resource type="Script" uid="uid://dhxbfyvsdh8be" path="res://scripts/game/components/systems/kill_tracker_component.gd" id="24_6uk18"]
[ext_resource type="Script" uid="uid://cxxxuga54xuom" path="res://scripts/game/components/systems/nemesis_component.gd" id="25_ektbh"]
[ext_resource type="Script" uid="uid://b5tpjb2kqlkgj" path="res://scripts/game/systems/nemesis_trait_data.gd" id="26_jlfxf"]
[ext_resource type="Resource" path="res://resources/traits/coward_trait.tres" id="27_ckuw0"]
[ext_resource type="Script" uid="uid://dm2pg188h33mq" path="res://scripts/game/components/collectibles/hit_drop_component.gd" id="28_ip5rs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vdd08"]
radius = 11.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ap80"]
radius = 8.39344

[node name="Berserker" type="CharacterBody2D"]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_vdd08")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("1_3g6yi")
region_enabled = true
region_rect = Rect2(0, 96, 32, 32)

[node name="HurtboxComponent" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("health_component")]
collision_layer = 32
collision_mask = 4
script = ExtResource("2_mveou")
health_component = NodePath("../../HealthComponent")
metadata/_custom_type_script = "uid://c5gmfinumygu4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtboxComponent"]
position = Vector2(-1, 1)
scale = Vector2(1.14136, 1.13235)
shape = SubResource("CapsuleShape2D_0ap80")
debug_color = Color(0.931449, 0.24244, 0.260464, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_q7sc0")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurtbox", "sense", "health")]
script = ExtResource("4_xfi85")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
sense = NodePath("../../EnemySenseComponent")
health = NodePath("../../HealthComponent")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurt_animation")]
script = ExtResource("5_yh76k")
hurt_animation = NodePath("../../HurtStaggerAnimationComponent")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "hurtbox", "health", "wobble_animation", "separation")]
script = ExtResource("6_e6f12")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
wobble_animation = NodePath("../../WobbleAnimationComponent")
separation = NodePath("../../SeparationComponent")

[node name="Flee" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "separation", "hurtbox", "health", "sprite", "wobble_animation")]
script = ExtResource("7_ygbvs")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
separation = NodePath("../../SeparationComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
sprite = NodePath("../../Sprite2D")
wobble_animation = NodePath("../../WobbleAnimationComponent")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("collision_shapes", "death_animation")]
script = ExtResource("8_e8tjr")
collision_shapes = [NodePath("../../Sprite2D/HurtboxComponent/CollisionShape2D"), NodePath("../../CollisionShape2D")]
death_animation = NodePath("../../DeathAnimationComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 5.0
path_postprocessing = 1

[node name="EnemySenseComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("9_ss0ny")
detection_radius = 500.0
metadata/_custom_type_script = "uid://blt8qxujohwor"

[node name="PathfindingComponent" type="Node" parent="." node_paths=PackedStringArray("agent")]
script = ExtResource("10_8rgxc")
agent = NodePath("../NavigationAgent2D")
metadata/_custom_type_script = "uid://dphatmavxn3u8"

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character_body", "hurtbox")]
script = ExtResource("11_gl741")
character_body = NodePath("..")
hurtbox = NodePath("../Sprite2D/HurtboxComponent")
move_speed = 25.0
metadata/_custom_type_script = "uid://c7bsngihe1vew"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("12_wqvmn")
max_health = 1000
metadata/_custom_type_script = "uid://ch8r0xsbtuj63"

[node name="WobbleAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("13_msr0g")
sprite = NodePath("../Sprite2D")

[node name="DeathAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "body")]
script = ExtResource("14_sh4l0")
sprite = NodePath("../Sprite2D")
body = NodePath("..")

[node name="HurtStaggerAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("15_xwu44")
sprite = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://echlin1jyex0"

[node name="SeparationComponent" type="Node" parent="."]
script = ExtResource("16_11rik")

[node name="FadeAnimationComponent" type="Node" parent="."]
script = ExtResource("17_77hyl")

[node name="DamageNumberComponent" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox_component", "fade_animation_component")]
script = ExtResource("18_p1g1x")
hurtbox_component = NodePath("../Sprite2D/HurtboxComponent")
fade_animation_component = NodePath("../FadeAnimationComponent")
font_size = 12

[node name="EnemyDamageComponent" type="Node2D" parent="."]
script = ExtResource("21_hl47r")
damage_amount = 1
damage_cooldown = 0.5

[node name="TextBubbleComponent" type="Node2D" parent="."]
script = ExtResource("22_y4y2w")
dialogue_data = ExtResource("23_5cvg5")
display_duration = 5.0
vertical_offset = -45.0
font_size = 8

[node name="KillTrackerComponent" type="Node" parent="."]
script = ExtResource("24_6uk18")

[node name="NemesisComponent" type="Node" parent="."]
script = ExtResource("25_ektbh")
traits = Array[ExtResource("26_jlfxf")]([ExtResource("27_ckuw0")])

[node name="HitDropComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("28_ip5rs")
health_component = NodePath("../HealthComponent")
drop_scene = ExtResource("20_hepg3")
max_drops = 3
